// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bokmål render 1`] = `
<div>
  <div
    class="_main_c05ad2"
  >
    <div
      class="_headerMain_c05ad2"
    >
      <div
        class="_pageImage_c05ad2"
      >
        <img
          alt="mainpage photo"
          data-nimg="1"
          decoding="async"
          height="435"
          loading="lazy"
          src="/helseatlas/img/frontpage.jpg?w=3840&q=75"
          srcset="/helseatlas/img/frontpage.jpg?w=1200&q=75 1x, /helseatlas/img/frontpage.jpg?w=3840&q=75 2x"
          style="color: transparent; max-width: 100%; height: auto;"
          width="1184"
        />
        <h1
          class="_pageTitle_c05ad2"
        >
          Likeverdige helsetjenester – uansett hvor du bor?
        </h1>
      </div>
    </div>
    <div
      class="_pageTitle_c05ad2"
    />
    <div
      class="_pageIngressContent_c05ad2"
    >
      <div
        class="_pageIngress_c05ad2"
      >
        Helseatlas sammenlikner befolkningens bruk av helsetjenester i forskjellige geografiske områder, uavhengig av hvilket sted pasientene behandles.
      </div>
    </div>
  </div>
</div>
`;

exports[`English render 1`] = `
<div>
  <div
    class="_main_c05ad2"
  >
    <div
      class="_headerMain_c05ad2"
    >
      <div
        class="_pageImage_c05ad2"
      >
        <img
          alt="mainpage photo"
          data-nimg="1"
          decoding="async"
          height="435"
          loading="lazy"
          src="/helseatlas/img/frontpage.jpg?w=3840&q=75"
          srcset="/helseatlas/img/frontpage.jpg?w=1200&q=75 1x, /helseatlas/img/frontpage.jpg?w=3840&q=75 2x"
          style="color: transparent; max-width: 100%; height: auto;"
          width="1184"
        />
        <h1
          class="_pageTitle_c05ad2"
        >
          Equitable health services – regardless of where you live?
        </h1>
      </div>
    </div>
    <div
      class="_pageTitle_c05ad2"
    />
    <div
      class="_pageIngressContent_c05ad2"
    >
      <div
        class="_pageIngress_c05ad2"
      >
        In Norway, it is a goal for the entire population to have an equal supply of health services across geography and social groups. The health atlas is a tool for comparing the population's use of health services in different geographical areas, regardless of where the patients are treated.
      </div>
    </div>
  </div>
</div>
`;
